# CCL

./: .coveragerc  .editorconfig  .flake8  .gitignore  .readthedocs.yaml  .test_correlation_MG2.py.swp  .travis.yml  CCL.project  CCL.workspace  CHANGELOG.md  CMakeLists.txt  CONTRIBUTE.md  CONTRIBUTING.md  DOC.md  Dockerfile  Doxyfile  INSTALL.md  LICENSE  LICENSE_COSMICEMU  MANIFEST.in  Makefile  Makefile.am  Makefile.bak  Makefile.in  Makefile_bak  README.md  TDL  TERMS.md  Untitled.ipynb  Write_DESC_SRD_Galaxy_Clustering_test_nonlimber.ipynb  aclocal.m4  angpow_install.py  azure-pipelines.yml  ccl_angpow_interface.cc  class_install.py  cleanup.sh  compare_nonlimber_FKEM.ipynb  compile.angpow_interface.sh  compile_all  compile_halomod_test.sh  (+19 more)
angpow/: Darwin_g++_omp_make.inc  Linux_g++_make.inc  Linux_icpc_make.inc  Makefile.am  Makefile.in  README.md  angpow.cc  angpow_bench1.ini  angpow_bench1_cl.txt.REF  angpow_bench2.ini  angpow_bench2_cl.txt.REF  angpow_bench3.ini  angpow_bench3_cl.txt.REF  angpow_bench4.ini  angpow_bench4_cl.txt.REF  angpow_bench5.ini  angpow_bench5_cl.txt.REF  angpow_bench6.ini  angpow_bench6_cl.txt.REF  diff.awk  limber.cc  stress-test.sh  verif.sh
angpow/data/: ClenshawCurtisRuleData-10.txt  ClenshawCurtisRuleData-160.txt  ClenshawCurtisRuleData-20.txt  ClenshawCurtisRuleData-300.txt  ClenshawCurtisRuleData-350.txt  ClenshawCurtisRuleData-40.txt  ClenshawCurtisRuleData-5.txt  ClenshawCurtisRuleData-50.txt  ClenshawCurtisRuleData-80.txt  CosmoRuleData-20.txt
angpow/doc/: Doxyfile  doxydoc  doxygen_html_style.css
angpow/python/: draw_c.py
angpow/src/: angpow_bessel.cc  angpow_chebyshevInt.cc  angpow_clbase.cc  angpow_cosmo.cc  angpow_ctheta.cc  angpow_kinteg.cc  angpow_parameters.cc  angpow_pk2cl.cc  angpow_powspec.cc  angpow_radint.cc  angpow_tools.cc  walltime_c.cc  walltimer.cc
class/: Makefile  Makefile.am  Makefile.in  explanatory.ini
class/include/: common.h  input.h  lensing.h
class/main/: class.c
class/source/: input.c  perturbations.c
examples/: .gitignore  3dcorr_benchmark.ipynb  3x2demo.ipynb  Benchmark_Comparisons.ipynb  Benchmark_Comparisons_test.ipynb  Benchmark_Comparisons_v3.ipynb  CMakeLists.txt  Comparing_rescaled_versus_calculated_mg_pk_muSigma_full_examples.ipynb  Correlation.ipynb  Correlation_3d.ipynb  Correlation_3dRSD.ipynb  Cosmological-Parameters.ipynb  Distance Calculations Example.ipynb  GGL_Benchmark_Comparisons.ipynb  GGLcorr_Benchmark_Comparisons.ipynb  General_Demo.ipynb  GeneralizedTracers.ipynb  HMFexample.ipynb  Halo model.ipynb  Halo-mass-function-example.ipynb  HaloMassFunctions.ipynb  Lensing angular power spectrum.ipynb  MCMC Likelihood Analysis.ipynb  MG_redshift_and_scale_dependences_examples.ipynb  MG_redshift_only_dependence_examples.ipynb  NFW_profile_3D_2D_demo.ipynb  Photo-z example.ipynb  Power spectrum example- isitgr-vs-rescale.ipynb  Power spectrum example.ipynb  RSD_benchmark.ipynb  RSD_benchmark_read.ipynb  Reading-writing-Cosmology-objects.ipynb  SLAC Feb2018 Demo.ipynb  amemu_example.ipynb  analytic_P2xi_new.ipynb  analytic_xi.txt  analytic_xi_1.txt  analytic_xi_2.txt  cache_lin_pre.frac_dev.npy  cache_lin_pre.k_arr.npy  (+35 more)
examples/ccl_v3_paper/: Baryon_halo_model_power_spectra.ipynb  Baryons_halo_model_power_spectrum.ipynb  Baryons_halo_model_power_spectrum_validation.ipynb  Halo model for IA.ipynb  PerturbationTheoryPk.ipynb  baryons.ipynb  paper_plots.ipynb
pyccl/: .gitignore  CMakeLists.txt  __init__.py  _core.py  _nonlimber_FKEM.py  _nonlimber_MATTER.py  _pk2d.py  _repr.py  _types.py  background.py  baryons.py  base.py  bcm.py  boltzmann.py  ccl.i  ccl_background.i  ccl_background.i.old  ccl_bcm.i  ccl_cls.i  ccl_constants.i  ccl_core.i  ccl_correlation.i  ccl_covs.i  ccl_f1d.i  ccl_fftlog.i  ccl_halomod.i  ccl_haloprofile.i  ccl_lsst_specs.i  ccl_mass_conversion.i  ccl_massfunc.i  ccl_musigma.i  ccl_neutrinos.i  ccl_p2d.i  ccl_params.i  ccl_pk2d.i  ccl_power.i  ccl_redshifts.i  ccl_sigM.i  ccl_tk3d.i  ccl_tracers.i  (+43 more)
pyccl/_core/: __init__.py  caching.py  deprecations.py  repr_.py  schema.py
pyccl/baryons/: __init__.py  baccoemu_baryons.py  baccoemu_baryons_dep.py  baryons_base.py  baryons_custom.py  fedeli14.py  mead20.py  schneider15.py  vandaalen19.py
pyccl/base/: __init__.py  caching.py  ccl_object.py  deprecations.py  repr_.py  schema.py
pyccl/data/: Ishiyama21_Ginv
pyccl/emulators/: __init__.py  aemulus_heft_nonlinear_pk.py  amemu_linear_pk.py  baccoemu_linear_pk.py  baccoemu_nonlinear_pk.py  cosmicemu_MTIV_pk.py  cosmicemu_pk.py  ee2_nonlinear_pk.py  emu_base.py  fremu_pk.py
pyccl/halos/: __init__.py  concentration.py  halo_model.py  halo_model_base.py  halos_extra.py  hbias.py  hmfunc.py  mass_concentration.py  massdef.py  pk_1pt.py  pk_2pt.py  pk_4pt.py  pk_hm.py  power_eff.py  profiles.py  profiles_2pt.py  profiles_3pt.py  profiles_cib.py  weak_lensing_profile.py
pyccl/modified_gravity/: __init__.py  modified_gravity_base.py  mu_Sigma.py
pyccl/nl_eft/: __init__.py  eft.py  tracers.py
pyccl/nl_pt/: __init__.py  bacco_lbias.py  ept.py  heft_aemulus.py  lpt.py  lpt_power.py  power.py  power_deprecated.py  pt_power.py  tracers.py
pyccl/nonlimber/: __init__.py  _nonlimber_FKEM.py
pyccl/nonlimber_fkem/: __init__.py  chi_grid.py  core.py  legacy_fkem.py  params.py  power_spectra.py  single_ell.py  tracers.py  transforms.py
pyccl/pspec/: __init__.py  bbks.py  boltzmann_camb.py  boltzmann_class.py  eh.py  pspec_base.py
pyccl/tests/: .test_power_mu_sigma_sigma8norm.py.swp  __init__.py  conftest.py  test_CCLObject.py  test_Profile2pt_rcorr.py  test_Tk3D_SSC_Terasawa22.py  test__caching.py  test_amemu.py  test_bacco_lbias_power.py  test_baccoemu.py  test_background.py  test_baryons.py  test_baryons_arico21.py  test_baryons_base.py  test_baryons_fedeli14.py  test_baryons_fedeli14_baryon_halo_model.py  test_baryons_fedeli14_halo_profiles.py  test_baryons_fedeli14_mass_fractions.py  test_baryons_fedeli14_numerics.py  test_baryons_fedeli14_power_spectra.py  test_baryons_fedeli14_profile_interpolation.py  test_baryons_mead20.py  test_baryons_mead20_mead20_utils.py  (+81 more)
(+1968 files in other folders)
