[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "cmake", "swig", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pyccl"
dynamic = ["version"]
authors = [
    {name = "LSST DESC"},
]
description="Library of validated cosmological functions."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["cosmology", "astrophysics", "physics", "science", "LSST"]
license = { text = "BSD" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "packaging",
    "scipy",
    "pyyaml",
]

[project.urls]
homepage = "https://lsstdesc.org/"
documentation = "https://ccl.readthedocs.io/en/latest/"
repository = "https://github.com/LSSTDESC/CCL"

[project.optional-dependencies]
boltzmann = ["camb", "classy", "isitgr"]
emu = ["baccoemu", "dark-emulator", "MiraTitanHMFemulator"]
pt = ["velocileptors", "FAST-PT"]
all = ["pyccl[boltzmann]", "pyccl[emu]", "pyccl[pt]"]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["pyccl*"]

[tool.setuptools.package-data]
pyccl = ["_ccllib.so", "emulators/data/*.npz"]

[tool.setuptools_scm]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "pp* *-musllinux_* *-win* *-manylinux_i686 *-manylinux_s390x *-manylinux_ppc64le"
test-command = "python -c \"import pyccl; print(pyccl.__version__)\""

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
before-all = "dnf install -y pcre-devel automake autoconf libtool bison"

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }
